# gpuesda

./: .gitignore  PLAN.md  PROJECT_SPEC.md  README.md  STATUS.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_moran.py  benchmark_open_dataset.py  benchmark_panel.py
docs/: benchmark_methodology.md  benchmark_report.md  blackmarble_a100_artifact_audit.md  blackmarble_a100_results.md  blackmarble_grid_audit.md  cpu_gpu_mapping.md  dataset_selection.md  methodology.md  pysal_esda_audit.md  raster_api.md
notebooks/: 01_open_dataset_validation.ipynb  02_inverse_distance_benchmark.ipynb  03_moran_cpu_gpu_equivalence.ipynb  04_local_moran_permutations.ipynb  05_panel_scaling_benchmark.ipynb  06_blackmarble_peru_a100.ipynb
outputs/blackmarble_peru_2024-03-21_a100/canonical/: artifact_manifest_sha256.csv  blackmarble_2024-03-21_log1000p1_a100_comparison_canonical.csv  blackmarble_2024-03-21_log1000p1_interpretation.json
outputs/blackmarble_peru_2024-03-21_a100/metadata/: blackmarble_2024-03-21_log1000p1_global.json  blackmarble_2024-03-21_log1000p1_run_metadata.json
scripts/: audit_blackmarble_grid.py  blackmarble_postprocessing.py  diagnose_environment.py  run_benchmarks.py  run_blackmarble_observed.py  run_blackmarble_permutation_smoke.py  run_cpu_baseline.py  run_validation.py
src/gpu_esda/: __init__.py  backend.py  baseline.py  benchmarking.py  diagnostics.py  lag.py  local_moran.py  moran.py  multiple_testing.py  permutations.py  validation.py  visualization.py  weights.py
src/gpu_esda/operators/: __init__.py  base.py  matrix.py  raster.py
src/gpu_esda/raster/: __init__.py  grid.py  io.py  permutations.py  statistics.py  stencils.py
tests/: __init__.py  conftest.py  test_backend.py  test_cpu_gpu_equivalence.py  test_lag.py  test_local_moran.py  test_moran.py  test_multiple_testing.py  test_permutations.py  test_raster_inference_interpretation.py  test_raster_io.py  test_raster_operator.py  test_raster_permutations.py  test_raster_statistics.py  test_weights.py
