[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "gpu-esda"
version = "0.2.0"
description = "Validated vector and raster CPU/GPU backend for exploratory spatial data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [{name = "GPU Powered ESDA contributors"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11,<1.17",
  "pandas>=2.0",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "libpysal>=4.10",
  "esda>=2.6",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "psutil>=5.9",
  "pyarrow>=15",
]

[project.optional-dependencies]
# The local diagnostic selects CUDA 13-compatible cupy-cuda13x. Users with
# CUDA 12 drivers should install cupy-cuda12x instead.
gpu = ["cupy-cuda13x[ctk]>=14.1", "numba>=0.61"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.8", "mypy>=1.13", "nbformat>=5.10"]
blackmarble = ["huggingface-hub>=0.25", "matplotlib>=3.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_esda"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
packages = ["gpu_esda"]
